<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_debug_server"
        android:orderInCategory="100"
        android:title="@string/action_reset_server"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug_latency"
        android:orderInCategory="100"
        android:title="@string/action_debug_latency"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ready"
        android:orderInCategory="100"
        android:title="@string/action_ready"
        android:icon="@drawable/fightr_target1"
        app:showAsAction="always" />
<!--
    Disabled this for now, automatically invoke this action
    <item
        android:id="@+id/action_prepare"
        android:orderInCategory="100"
        android:title="@string/action_prepare_match"
        android:icon="@drawable/fightr_target1"
        app:showAsAction="always" />
-->

    <item
        android:id="@+id/action_select_fighter"
        android:orderInCategory="100"
        android:title="@string/fightr_select"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_register"
        android:orderInCategory="100"
        android:title="@string/action_register"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

</menu>
